# mads_director

./: .gitignore  CMakeLists.txt  README.md  director.toml
.github/workflows/: ci.yml  tag-build.yml
_codeql_build_dir/: CMakeCache.txt  CPackConfig.cmake  CPackSourceConfig.cmake  Makefile  cmake_install.cmake  mads-director
examples/: director.toml
src/: attach_client.cpp  attach_client.hpp  attach_launcher.cpp  attach_launcher.hpp  config.cpp  config.hpp  goback.hpp  gui_app.cpp  gui_app.hpp  main.cpp  platform_process.hpp  platform_process_posix.cpp  platform_process_windows.cpp  pm.hpp  process_manager.cpp  process_manager.hpp
